- add fund history

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="gmt_planter">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>gmt_planter</title>
+  <title>Handprint for Partners</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
